--- a/SmartPillowApp/app/src/main/res/values/themes.xml
+++ b/SmartPillowApp/app/src/main/res/values/themes.xml
@@ -2,9 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.SmartPillowApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -12,6 +10,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="bottomNavigationStyle">@style/Widget.MaterialComponents.BottomNavigationView.Colored</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorOnPrimary">@color/grey</item>
     </style>
 
     <style name="Theme.SmartPillowApp.NoActionBar">
