--- a/SmartPillowApp/app/src/main/res/layout/fragment_second.xml
+++ b/SmartPillowApp/app/src/main/res/layout/fragment_second.xml
@@ -7,17 +7,6 @@
     tools:context=".SecondFragment">
 
     <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
-        android:layout_width="match_parent"
-        android:layout_height="200dip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/snore_graph_label"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <com.jjoe64.graphview.GraphView
         android:id="@+id/graph2"
         android:layout_width="match_parent"
         android:layout_height="200dip"
@@ -57,20 +46,55 @@
         android:id="@+id/snore_graph_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:text="Snore Data"
         android:textColor="@color/grey"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pick_date" />
+        app:layout_constraintTop_toBottomOf="@+id/time_slept_val" />
+
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph"
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/snore_graph_label"
+        app:layout_constraintVertical_bias="0.009" />
+
+    <TextView
+        android:id="@+id/time_slept"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="12dp"
+        android:text="Hours Slept"
+        android:textColor="@color/grey"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start" />
+
+    <TextView
+        android:id="@+id/time_slept_val"
+        android:layout_width="408dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@color/grey"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time_slept" />
 
     <TextView
         android:id="@+id/movement_graph_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="4dp"
         android:text="Movement Data"
         android:textColor="@color/grey"
         android:textSize="20sp"
